--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="bootstrap/css/custom.css" type="text/css" rel="stylesheet">
     <link href="bootstrap/css/slider.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -88,7 +88,7 @@
                 <div class="container">
                 <div class="row">
                     <div class="col-xs-12 p-2">
-                        <h4>TIRE NAME</h4> 
+                        <h4><strong>TIRE NAME</strong></h4> 
                         <p>TIRE CATEGORY</p> 
                     </div>
                     <div class="col-xs-12 d-flex row-nowrap p-2">
@@ -108,10 +108,10 @@
                 <div class="col d-flex row-nowrap">
                  <div class="row">
                     <div class="col">
-                        <p>AVAILABILITY: <br> IN STOCK <br> AVAILABLE IN MIN 3 DAYS</p>
+                        <p>AVAILABILITY: <br> <h5><strong>IN STOCK</strong></h5> <br> AVAILABLE IN MIN 3 DAYS</p>
                     </div>
                     <div class="col">
-                        <p class="text-left">PRICE: <br> $130.00 <br> per tire <br> Set of 4: $520.00</p>
+                        <p class="text-left">PRICE: <br> <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00</p>
                     </div>
                     <div class="col">
                         <p class="text-left">QUANTITY:
@@ -133,9 +133,9 @@
                  </div>    
                  </div>    
                 </div>
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-end">
                         <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                            <button type="button" class="btn btn-success">SELECT AND PROCEED TO
+                            <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
                             APPOINTMENT SCHEDULING
                             </button>  
                         </div>  
@@ -146,7 +146,7 @@
                     <div class="container">
                     <div class="row">
                         <div class="col-xs-12 p-2">
-                            <h4>TIRE NAME</h4> 
+                            <h4><strong>TIRE NAME</strong></h4> 
                             <p>TIRE CATEGORY</p> 
                         </div>
                         <div class="col-xs-12 d-flex row-nowrap p-2">
@@ -166,10 +166,10 @@
                     <div class="col d-flex row-nowrap">
                      <div class="row">
                         <div class="col">
-                            <p>AVAILABILITY: <br> IN STOCK <br> AVAILABLE IN MIN 3 DAYS</p>
+                            <p>AVAILABILITY: <br> <h5><strong>OUT-OF-STOCK</strong></h5> <br> AVAILABLE IN MIN 7 DAYS</p>
                         </div>
                         <div class="col">
-                            <p class="text-left">PRICE: <br> $130.00 <br> per tire <br> Set of 4: $520.00</p>
+                            <p class="text-left">PRICE: <br> <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00</p>
                         </div>
                         <div class="col">
                             <p class="text-left">QUANTITY:
@@ -191,11 +191,11 @@
                      </div>    
                      </div>    
                     </div>
-                    <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-end">
                             <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                                <button type="button" class="btn btn-success">SELECT AND PROCEED TO
-                                APPOINTMENT SCHEDULING
-                                </button>  
+                                    <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
+                                     APPOINTMENT SCHEDULING
+                                    </button>    
                             </div>  
                          </div> 
                 </div>
@@ -204,7 +204,7 @@
                         <div class="container">
                         <div class="row">
                             <div class="col-xs-12 p-2">
-                                <h4>TIRE NAME</h4> 
+                                <h4><strong>TIRE NAME</strong></h4> 
                                 <p>TIRE CATEGORY</p> 
                             </div>
                             <div class="col-xs-12 d-flex row-nowrap p-2">
@@ -224,10 +224,10 @@
                         <div class="col d-flex row-nowrap">
                          <div class="row">
                             <div class="col">
-                                <p>AVAILABILITY: <br> IN STOCK <br> AVAILABLE IN MIN 3 DAYS</p>
+                                <p>AVAILABILITY: <br><h5><strong>IN STOCK</strong></h5> <br> AVAILABLE IN MIN 2 DAYS</p>
                             </div>
                             <div class="col">
-                                <p class="text-left">PRICE: <br> $130.00 <br> per tire <br> Set of 4: $520.00</p>
+                                <p class="text-left">PRICE: <br> <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00</p>
                             </div>
                             <div class="col">
                                 <p class="text-left">QUANTITY:
@@ -249,24 +249,22 @@
                          </div>    
                          </div>    
                         </div>
-                        <div class="row d-flex justify-content-center">
+                        <div class="row d-flex justify-content-end">
                                 <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                                    <button type="button" class="btn btn-success">SELECT AND PROCEED TO
-                                    APPOINTMENT SCHEDULING
-                                    </button>  
+                                    <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
+                                     APPOINTMENT SCHEDULING
+                                    </button>    
                                 </div>  
                              </div> 
                     </div>
                     </section>
-                
-                <div class="col mb-2">
+                <div class="container">
                     <div class="row">
-                        <div class="col-sm-12 col-md-10 text-right">
-                            <div class="bg-success text-white">Total: $1560.00</div>
+                        <div class="col d-flex justify-content-end">
+                            <div class="total_price">Total: $1560.00</div>
                         </div>
                     </div>
-                </div>
-            
+                 </div>
     </main>
 
 
