--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
                                 </div>
                                 <div class="col">
                                     <p class="text-left">PRICE: <br>
-                                        <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
+                                        <h5><strong id="price_tire1">$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
                                     </p>
                                 </div>
                                 <div class="col">
                                     <p class="text-left">QUANTITY:
                                         <div class="col d-flex flex-column p-2 align-items-center">
-                                            <select class="custom-select" name="brand" id="brand">
+                                            <select class="custom-select" name="quantity" id="quantity_tire1">
                                                 <option class="dropdown-item" value="1">1</option>
                                                 <option class="dropdown-item" value="2">2</option>
                                                 <option class="dropdown-item" value="3">3</option>
-                                                <option class="dropdown-item" value="4">4</option>
+                                                <option selected class="dropdown-item" value="4">4</option>
                                             </select>
                                         </div>
                                 </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="row d-flex justify-content-end">
                         <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                            <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
+                            <button type="button" class="buy_tire" id="buy_tire1">SELECT AND PROCEED TO
                                 APPOINTMENT SCHEDULING
                             </button>
                         </div>
@@ -178,17 +178,17 @@
                                 </div>
                                 <div class="col">
                                     <p class="text-left">PRICE: <br>
-                                        <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
+                                        <h5 ><strong id="price_tire2">$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
                                     </p>
                                 </div>
                                 <div class="col">
                                     <p class="text-left">QUANTITY:
                                         <div class="col d-flex flex-column p-2 align-items-center">
-                                            <select class="custom-select" name="brand" id="brand">
+                                            <select class="custom-select" name="quantity" id="quantity_tire2">
                                                 <option class="dropdown-item" value="1">1</option>
                                                 <option class="dropdown-item" value="2">2</option>
                                                 <option class="dropdown-item" value="3">3</option>
-                                                <option class="dropdown-item" value="4">4</option>
+                                                <option selected class="dropdown-item" value="4">4</option>
                                             </select>
                                         </div>
                                 </div>
@@ -203,7 +203,7 @@
                     </div>
                     <div class="row d-flex justify-content-end">
                         <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                            <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
+                            <button type="button" class="buy_tire" id="buy_tire2">SELECT AND PROCEED TO
                                 APPOINTMENT SCHEDULING
                             </button>
                         </div>
@@ -240,17 +240,17 @@
                                 </div>
                                 <div class="col">
                                     <p class="text-left">PRICE: <br>
-                                        <h5><strong>$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
+                                        <h5><strong id="price_tire3">$130.00</strong></h5> <br> per tire <br> Set of 4: $520.00
                                     </p>
                                 </div>
                                 <div class="col">
                                     <p class="text-left">QUANTITY:
                                         <div class="col d-flex flex-column p-2 align-items-center">
-                                            <select class="custom-select" name="brand" id="brand">
+                                            <select class="custom-select" name="quantity" id="quantity_tire3">
                                                 <option class="dropdown-item" value="1">1</option>
                                                 <option class="dropdown-item" value="2">2</option>
                                                 <option class="dropdown-item" value="3">3</option>
-                                                <option class="dropdown-item" value="4">4</option>
+                                                <option selected class="dropdown-item" value="4">4</option>
                                             </select>
                                         </div>
                                 </div>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="row d-flex justify-content-end">
                         <div class="col-xs-6 col-sm-6 col-md-8 col-lg-6">
-                            <button type="button" class="buy_tire" id="buy_tire">SELECT AND PROCEED TO
+                            <button type="button" class="buy_tire" id="buy_tire3">SELECT AND PROCEED TO
                                 APPOINTMENT SCHEDULING
                             </button>
                         </div>
@@ -275,8 +275,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-flex justify-content-end">
-                        <div class="total_price">
-                            <h5>Total: $1560.00</h5>
+                        <div class="total_price" id="total_price">
+                            
                         </div>
                     </div>
                 </div>
@@ -285,7 +285,7 @@
 
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- <script src="bootstrap/js/main.js"></script> -->
+    <script src="bootstrap/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
